@@ -15,10 +15,15 @@ import com.powsybl.computation.*;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.iidm.network.VariantManagerConstants;
 import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
+import com.powsybl.loadflow.LoadFlowResult;
 import com.powsybl.security.*;
+import com.powsybl.security.action.Action;
+import com.powsybl.security.action.SwitchAction;
+import com.powsybl.security.condition.TrueCondition;
 import com.powsybl.security.converter.JsonSecurityAnalysisResultExporter;
 import com.powsybl.security.execution.SecurityAnalysisExecutionInput;
 import com.powsybl.security.results.PostContingencyResult;
+import com.powsybl.security.strategy.OperatorStrategy;
 import org.apache.commons.lang3.SystemUtils;
 import org.junit.After;
 import org.junit.Before;
@@ -104,19 +109,24 @@ public class SecurityAnalysisExecutionHandlersTest {
         SecurityAnalysisResult result = report.getResult();
 
         assertNotNull(result);
-        assertTrue(result.getPreContingencyLimitViolationsResult().isComputationOk());
+        assertSame(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
         assertTrue(result.getPreContingencyLimitViolationsResult().getLimitViolations().isEmpty());
         assertTrue(result.getPostContingencyResults().isEmpty());
     }
 
     @Test
     public void forwardedBeforeWithCompleteInput() throws IOException {
+        Action action = new SwitchAction("action", "switch", false);
+        OperatorStrategy strategy = new OperatorStrategy("strat", "cont", new TrueCondition(), List.of("action"));
+
         SecurityAnalysisExecutionInput input = new SecurityAnalysisExecutionInput()
                 .setParameters(new SecurityAnalysisParameters())
                 .setNetworkVariant(EurostagTutorialExample1Factory.create(), VariantManagerConstants.INITIAL_VARIANT_ID)
                 .setContingenciesSource(ByteSource.wrap("contingencies definition".getBytes(StandardCharsets.UTF_8)))
                 .addResultExtensions(ImmutableList.of("ext1", "ext2"))
-                .addViolationTypes(ImmutableList.of(LimitViolationType.CURRENT));
+                .addViolationTypes(ImmutableList.of(LimitViolationType.CURRENT))
+                .setActions(List.of(action))
+                .setOperatorStrategies(List.of(strategy));
         ExecutionHandler<SecurityAnalysisReport> handler = SecurityAnalysisExecutionHandlers.forwarded(input, 12);
 
         Path workingDir = fileSystem.getPath("/work");
@@ -129,6 +139,8 @@ public class SecurityAnalysisExecutionHandlersTest {
                         "--output-file=/work/result.json",
                         "--output-format=JSON",
                         "--contingencies-file=/work/contingencies.groovy",
+                        "--actions-file=/work/actions.json",
+                        "--strategies-file=/work/strategies.json",
                         "--with-extensions=ext1,ext2",
                         "--limit-types=CURRENT",
                         "--task-count=12");
@@ -136,6 +148,8 @@ public class SecurityAnalysisExecutionHandlersTest {
         assertThat(workingDir.resolve("network.xiidm")).exists();
         assertThat(workingDir.resolve("parameters.json")).exists();
         assertThat(workingDir.resolve("contingencies.groovy")).exists();
+        assertThat(workingDir.resolve("strategies.json")).exists();
+        assertThat(workingDir.resolve("actions.json")).exists();
     }
 
     @Test
@@ -225,8 +239,8 @@ public class SecurityAnalysisExecutionHandlersTest {
     }
 
     private static SecurityAnalysisResult resultForContingency(String id) {
-        return new SecurityAnalysisResult(LimitViolationsResult.empty(),
-                Collections.singletonList(new PostContingencyResult(new Contingency(id),
+        return new SecurityAnalysisResult(LimitViolationsResult.empty(), LoadFlowResult.ComponentResult.Status.CONVERGED,
+                Collections.singletonList(new PostContingencyResult(new Contingency(id), PostContingencyComputationStatus.CONVERGED,
                         LimitViolationsResult.empty())));
     }
 
@@ -256,7 +270,7 @@ public class SecurityAnalysisExecutionHandlersTest {
         SecurityAnalysisResult result = report.getResult();
 
         assertNotNull(result);
-        assertTrue(result.getPreContingencyLimitViolationsResult().isComputationOk());
+        assertSame(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
         assertTrue(result.getPreContingencyLimitViolationsResult().getLimitViolations().isEmpty());
         assertEquals(2, result.getPostContingencyResults().size());
         assertEquals("c1", result.getPostContingencyResults().get(0).getContingency().getId());
@@ -325,7 +339,7 @@ public class SecurityAnalysisExecutionHandlersTest {
         SecurityAnalysisResult result = report.getResult();
 
         assertNotNull(result);
-        assertTrue(result.getPreContingencyLimitViolationsResult().isComputationOk());
+        assertSame(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
         assertTrue(result.getPreContingencyLimitViolationsResult().getLimitViolations().isEmpty());
         assertEquals(2, result.getPostContingencyResults().size());
         assertEquals("c1", result.getPostContingencyResults().get(0).getContingency().getId());
@@ -372,7 +386,7 @@ public class SecurityAnalysisExecutionHandlersTest {
         SecurityAnalysisResult result = report.getResult();
 
         assertNotNull(result);
-        assertTrue(result.getPreContingencyLimitViolationsResult().isComputationOk());
+        assertSame(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
         assertTrue(result.getPreContingencyLimitViolationsResult().getLimitViolations().isEmpty());
         assertEquals(1, result.getPostContingencyResults().size());
         assertEquals("c1", result.getPostContingencyResults().get(0).getContingency().getId());
